# square-log

./: .gitignore  .luarc.json  Cargo.toml  LICENSE  README.md  config.yaml  sources.example.lua
examples/: sources.csv  sources.lua
examples/plugins/: coffees.lua  sample.lua  wines.lua
plugins/: github_user_activity.lua
src/: config.rs  lib.rs  record.rs  source.rs
src/db/: mock.rs  mod.rs  sled.rs
src/http/: axum.rs  mod.rs
src/plugin/: api.rs  mod.rs  registry.rs  scheduler.rs  source.rs
src/plugin/api/: db.rs  http.rs  mod.rs
